<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/vaultshelf_nav_home_item"
        android:icon="@drawable/ic_vaultshelf_home"
        android:title="@string/vaultshelf_nav_home" />
    <item
        android:id="@+id/vaultshelf_nav_library_item"
        android:icon="@drawable/ic_vaultshelf_library"
        android:title="@string/vaultshelf_nav_library" />
    <item
        android:id="@+id/vaultshelf_nav_files_item"
        android:icon="@drawable/ic_vaultshelf_files"
        android:title="@string/vaultshelf_nav_files" />
    <item
        android:id="@+id/vaultshelf_nav_vault_item"
        android:icon="@drawable/ic_vaultshelf_vault"
        android:title="@string/vaultshelf_nav_vault" />
    <item
        android:id="@+id/vaultshelf_nav_settings_item"
        android:icon="@drawable/ic_vaultshelf_settings"
        android:title="@string/vaultshelf_nav_settings" />
</menu>
